# Absolut

./: README.md
scripts/: ListThresholds.txt  ReadRawBindings.R
scripts/0_GenerateRawAnnotatedRepertoires/: 2FD6_AU.sh
scripts/10_AnalyzingSurfaceResiduesPDBs/: get_surface_residues.py  get_surface_residues_in.py
scripts/11_VAE_ESM-1b/: Datasets.py  Models.py  VAE_embedding.py  export_latent.py  train_script.py  train_script_mod.py
scripts/12_DLAB_VS/: 0-StepByStepReproducingDLAB-VS.txt  1-SelectAbAgPairsForDLAB.Rmd  2-FormatAbAgPairsForAbsolut.Rmd  4-PreprocessAbsolutPoseOutput20January.py  5-DLAB11_Fair.py  DLAB11_FairTestsAndSimpler.ipynb
scripts/13_DataLeakage/: 1-ScriptDoLeakageClustering.sh  1-UMAPCluster.py  2-ShowClustersForFigure.ipynb  3-ExampleCommandsRunML.sh  Task4-MemExternal.py  Task4-TransformerMemExternal.py
scripts/14_Shallow_Transfer_Binary/: ListCommandsWithExternal.sh  Task7_V8Feb.ipynb  Task7_V8FebExternal.py
scripts/1_GenerateClassesFromRawRepertoires/: mainScript.R  mainScript.sh
scripts/2_GenerateFeaturesPerClass/: createAllFeatures.sh
scripts/3_GenerateDatasetsD1D2/: AnalyzeTask1.Rmd  MergeMascottesV3.R
scripts/4_GenerateDatasetD3/: GenerateTask2TheRealOne.Rmd  ListAntigens142.txt  a.pro  create2DTable.cpp
scripts/5_GenerateDatasetsParatopeEpitope/: GenerateTask4EpiPara.Rmd
scripts/6_ML_binary_classification/: Task1V18_06_2021.py
scripts/7_ML_multiclass_classification/: Task2V6Apr.py
scripts/8_ML_paratope_epitope/: Task4-Encoder-Decoder_9_03_21.py  Task4-Transformer_9_03_21.py
scripts/9_ShallowModelsClassificationAndParatopeEpitope/: data_splitter.py  find_files.py  lr.py  lrmc.py  lrpe.py  merge_clf_acc.py  nb.py  nbmc.py  nbpe.py  onehotencoder.py  pca.py  prep_data_task2.py  prep_data_task4.py  readme.txt  rf.py  rfmc.py  rfpe.py  svm.py  svmmc.py  svmpe.py
src/: Makefile  SmallSetCDR3.txt
src/Absolut/: Absolut.h  Absolut.pri  Absolut.pro  AbsolutNoLib.pro  AbsolutNoLibMPI.pro  antigenLib.cpp  antigenLib.h  delimain.cpp  discretize.cpp  discretize.h  dlab.cpp  dlab.h  epitope.cpp  epitope.h  fileformats.cpp  fileformats.h  generatemutants.cpp  generatemutants.h  html.cpp  html.h  motifFeatures.cpp  motifFeatures.h  oldScripts.cpp  pdb.cpp  pdb.h  pdb.ui  poolstructs.cpp  poolstructs.h  quality.cpp  runListTasks.cpp  selfEvo.cpp  topology.cpp  topology.h
src/Delicab/: Delicab.pro  DelicabNoLib.pro  DelicabNoLibMPI.pro  antigenLib.cpp  delimain.cpp  epitope.h  fileformats.h  importrepertoire.cpp  importrepertoire.h  mainCadenab.cpp  oldScripts.cpp  pdb.h  pdb.ui  quality.cpp  quality.h  selfEvo.h  topology.cpp
src/Tests/: common.cpp  common.h  sequenceTests.cpp
src/Tools/: dirent.h  distribution.cpp  distribution.h  graph.cpp  graph.h  md5.cpp  md5.h  nucleotides.cpp  (+4 more)
src/latFit/: AUTHORS  ChangeLog  Exception.cc  Exception.hh  LICENSE  Makefile.am  Makefile.in  NEWS  PDBsupport.hh  README  README.md  SC_MinE.cc  SC_MinE.hh  SC_OutAbs.cc  SC_OutAbs.hh  SC_OutEnergy.cc  SC_OutEnergy.hh  TODO  energyFileSupport.hh  kabsch.cc  kabsch.hh  latConv.cc  latConv.hh  latFit.cc  latFit.h  latFit.pri  latFold.cc  latFoldVec.cc  latMap.cc  latNum.cc  latVec.cc  testLat.pro  testSuperPos.cc  version.hh
src/latFit/biu/: AllowedBasePairs.hh  AllowedBasePairs.icc  Alphabet.hh  Alphabet.icc  BackboneStructure3D.hh  BioMolecule.hh  DistanceEnergyFunction.cc  DistanceEnergyFunction.hh  Graph_UD.cc  Graph_UD.hh  HashMap.hh  HashMap.hh.in  LatticeDescriptor.cc  LatticeDescriptor.hh  LatticeDescriptor.icc  LatticeDescriptorCKW.cc  LatticeDescriptorCKW.hh  LatticeDescriptorCUB.cc  LatticeDescriptorCUB.hh  LatticeDescriptorFCC.cc  LatticeDescriptorFCC.hh  LatticeDescriptorSQR.cc  LatticeDescriptorSQR.hh  LatticeFrame.cc  LatticeFrame.hh  LatticeModel.cc  LatticeModel.hh  LatticeModel.icc  LatticeMoveSet.hh  LatticeMoveSet.icc  LatticeNeighborhood.hh  LatticeNeighborhood.icc  LatticeProtein.hh  LatticeProteinUtil.cc  LatticeProteinUtil.hh  LatticeProtein_I.cc  LatticeProtein_I.hh  LatticeProtein_Ipnt.cc  LatticeProtein_Ipnt.hh  LimitedHash.hh  (+34 more)
src/latFit/biu/Random123/: LICENSE
src/latFit/biu/qrng/: gsl_errno.h  gsl_qrng.h  niederreiter-2.c  qrng.c  sobol.c
src/latFit/biu/util/: Util.cpp  Util.h  Util_String.cpp  Util_String.h  biu-string.cpp  biu-string.h  point.hh  point.icc
src/latFit/doc/: Makefile.am  Makefile.in  manual-LatFit.tex  manual-LatFold.tex  manual-LatFoldVec.tex  manual-LatVec.tex  version-info.tex.in
(+31 files in other folders)
